--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^3.11.0",
     "react-moment": "^1.0.0",
     "react-scripts": "4.0.0",
+    "scripts": "^0.1.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
